# rust-todo-list-api

./: Cargo.toml  docker-compose.yml
migrations/: 20220808053335_create_todos_table.up.sql
src/: controllers.rs  http.rs  main.rs  models.rs  repositories.rs  router.rs
