[package]
name = "rust-todo-list-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "mysql" ] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.5", features = ["json", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
axum-macros = "0.2"
http = "0.2.8"